--- a/all.bib
+++ b/all.bib
@@ -1515,3 +1515,187 @@ month={Sept},}
   year={2012}
 }
 
+# Disparity propagation - From "Vision in 3D environments" book
+@article{scharstein2002taxonomy,
+  title={A taxonomy and evaluation of dense two-frame stereo correspondence algorithms},
+  author={Scharstein, Daniel and Szeliski, Richard},
+  journal={International journal of computer vision},
+  volume={47},
+  number={1-3},
+  pages={7--42},
+  year={2002},
+  publisher={Springer}
+}
+
+@inproceedings{klaus2006segment,
+  title={Segment-based stereo matching using belief propagation and a self-adapting dissimilarity measure},
+  author={Klaus, Andreas and Sormann, Mario and Karner, Konrad},
+  booktitle={Pattern Recognition, 2006. ICPR 2006. 18th International Conference on},
+  volume={3},
+  pages={15--18},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{woodford2009global,
+  title={Global stereo reconstruction under second-order smoothness priors},
+  author={Woodford, Oliver and Torr, Philip and Reid, Ian and Fitzgibbon, Andrew},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={31},
+  number={12},
+  pages={2115--2128},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{mur2015orb,
+  title={ORB-SLAM: a versatile and accurate monocular SLAM system},
+  author={Mur-Artal, Raul and Montiel, Jose Maria Martinez and Tardos, Juan D},
+  journal={IEEE Transactions on Robotics},
+  volume={31},
+  number={5},
+  pages={1147--1163},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{tan2013robust,
+  title={Robust monocular SLAM in dynamic environments},
+  author={Tan, Wei and Liu, Haomin and Dong, Zilong and Zhang, Guofeng and Bao, Hujun},
+  booktitle={Mixed and Augmented Reality (ISMAR), 2013 IEEE International Symposium on},
+  pages={209--218},
+  year={2013},
+  organization={IEEE}
+}
+
+# Dense diparity in a few secs
+@inproceedings{chakrabarti2015low,
+  title={Low-level vision by consensus in a spatial hierarchy of regions},
+  author={Chakrabarti, Ayan and Xiong, Ying and Gortler, Steven J and Zickler, Todd},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={4009--4017},
+  year={2015}
+}
+
+@inproceedings{yamaguchi2014efficient,
+  title={Efficient joint segmentation, occlusion labeling, stereo and flow estimation},
+  author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
+  booktitle={European Conference on Computer Vision},
+  pages={756--771},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{yamaguchi2013robust,
+  title={Robust monocular epipolar flow estimation},
+  author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1862--1869},
+  year={2013}
+}
+
+# Dense diparity in less than a sec
+@article{kendall2017end,
+  title={End-to-End Learning of Geometry and Context for Deep Stereo Regression},
+  author={Kendall, Alex and Martirosyan, Hayk and Dasgupta, Saumitro and Henry, Peter and Kennedy, Ryan and Bachrach, Abraham and Bry, Adam},
+  journal={arXiv preprint arXiv:1703.04309},
+  year={2017}
+}
+
+@inproceedings{luo2016efficient,
+  title={Efficient deep learning for stereo matching},
+  author={Luo, Wenjie and Schwing, Alexander G and Urtasun, Raquel},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={5695--5703},
+  year={2016}
+}
+
+@inproceedings{mayer2016large,
+  title={A large dataset to train convolutional networks for disparity, optical flow, and scene flow estimation},
+  author={Mayer, Nikolaus and Ilg, Eddy and Hausser, Philip and Fischer, Philipp and Cremers, Daniel and Dosovitskiy, Alexey and Brox, Thomas},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={4040--4048},
+  year={2016}
+}
+
+
+@article{sunyoto2004jaminan,
+  title={Jaminan Kualitas Pelayanan Konsumen},
+  author={Sunyoto, Hamingpraja},
+  journal={Penerbit Liberty, Yogyakarta},
+  year={2004}
+}
+
+@article{lazaros2008review,
+  title={Review of stereo vision algorithms: from software to hardware},
+  author={Lazaros, Nalpantidis and Sirakoulis, Georgios Christou and Gasteratos, Antonios},
+  journal={International Journal of Optomechatronics},
+  volume={2},
+  number={4},
+  pages={435--462},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{jung2003high,
+  title={High resolution terrain mapping using low attitude aerial stereo imagery},
+  author={Jung, Il-Kyun and others},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={946--951},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{paalanen2008towards,
+  title={Towards monocular on-line 3d reconstruction},
+  author={Paalanen, Pekka and Kyrki, Ville and Kamarainen, Joni-Kristian},
+  booktitle={Workshop on Vision in Action: Efficient strategies for cognitive agents in complex environments},
+  year={2008}
+}
+
+@inproceedings{toldo2008robust,
+  title={Robust multiple structures estimation with j-linkage},
+  author={Toldo, Roberto and Fusiello, Andrea},
+  booktitle={European conference on computer vision},
+  pages={537--547},
+  year={2008},
+  organization={Springer}
+}
+
+@inproceedings{upadhyay2015trajectory,
+  title={Trajectory planning for monocular SLAM based exploration system},
+  author={Upadhyay, Sarthak and Dewan, Ayush and Singh, Arun Kumar and Krishna, Madhava},
+  booktitle={Proceedings of the 2015 Conference on Advances In Robotics},
+  pages={27},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{newcombe2010live,
+  title={Live dense reconstruction with a single moving camera},
+  author={Newcombe, Richard A and Davison, Andrew J},
+  booktitle={Computer Vision and Pattern Recognition (CVPR), 2010 IEEE Conference on},
+  pages={1498--1505},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{teixeira2016real,
+  title={Real-time mesh-based scene estimation for aerial inspection},
+  author={Teixeira, Lucas and Chli, Margarita},
+  booktitle={Intelligent Robots and Systems (IROS), 2016 IEEE/RSJ International Conference on},
+  pages={4863--4869},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{pan2009proforma,
+  title={ProFORMA: Probabilistic Feature-based On-line Rapid Model Acquisition.},
+  author={Pan, Qi and Reitmayr, Gerhard and Drummond, Tom},
+  booktitle={BMVC},
+  volume={2},
+  pages={6},
+  year={2009},
+  organization={Citeseer}
+}
+
